--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,6 @@
+/.idea/
 /__pycache__/
 /Resource/
-/.idea/
-/build/
-/dist/
+/src/
+/testlab/
 geckodriver.log
-testlab2.py
-testlab.py
-test.py
-src/soco
