--- a/REWORK/package.json
+++ b/REWORK/package.json
@@ -21,5 +21,7 @@
   "devDependencies": {
     "electron": "^13.1.6"
   },
-  "dependencies": {}
+  "dependencies": {
+    "electron-window-state": "^5.0.3"
+  }
 }
