--- a/REWORK/package.json
+++ b/REWORK/package.json
@@ -22,6 +22,7 @@
     "electron": "^13.1.6"
   },
   "dependencies": {
-    "electron-window-state": "^5.0.3"
+    "electron-window-state": "^5.0.3",
+    "node-notifier": "^10.0.0"
   }
 }
