--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,31 +1,85 @@
 name: "Feature request 🚀"
+
 description: Suggest an idea for this project
+
 labels: Enhancement, New request
+
 assignees: JueK3y-Prv
+
 body:
+
 - type: markdown
+
   attributes:
+
     value: |
+
       Please make sure to [search for existing feature requests](https://github.com/JueK3y/Instagram-automated-commenting/issues?q=is%3Aopen+is%3Aissue+label%3AEnhancement) and [check the FAQ](https://github.com/JueK3y/Instagram-automated-commenting/wiki/FAQ) before filing a new one!
 
-- type: textarea
+ 
+
+ - type: checkboxes
+
   attributes:
+
     label: Related to a problem
-    placeholder: "A clear and concise description of what the problem is. Ex. I'm always frustrated when [...]"
+
     description: Does your feature request refer to a problem?
+
+    options:
+
+      - label: Yes, it refers to a problem.
+
+      - label: No, not related.
+
   validations:
+
     required: true
 
+ 
+
 - type: textarea
+
   attributes:
+
+    label: Describe the problem
+
+    placeholder: |
+
+      "A clear and concise description of what the problem is.
+
+      Ex. I'm always frustrated when [...]"
+
+    description: If the request is related to a problem, describe the problem here.
+
+  validations:
+
+    required: false
+
+ 
+
+- type: textarea
+
+  attributes:
+
     label: The solution you'd like
+
     description: A clear and concise description of what you want to happen.
+
   validations:
+
     required: true
 
+ 
+
 - type: textarea
+
   attributes:
+
     label: Alternatives you've considered
+
     description: A clear and concise description of any alternative solutions or features you've considered.
+
   validations:
-    required: true
+
+    required: false
