--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,4 +1,4 @@
-name: "Feature request 🚀"
+name: "Feature request"
 description: Suggest an idea for this project
 labels: Enhancement, New request
 assignees: JueK3y-Prv
