--- a/.github/ISSUE_TEMPLATE/Feature_Request.yml
+++ b/.github/ISSUE_TEMPLATE/Feature_Request.yml
@@ -1,43 +1,47 @@
-name: "Feature request 🚀"
-description: Suggest an idea for this project
-labels: Enhancement, New request
+name: "Bug report 🐛"
+description: Report errors or unexpected behavior
+labels: Bug, New request
 assignees: JueK3y-Prv
 body:
 - type: markdown
   attributes:
     value: |
-      Please make sure to [search for existing feature requests](https://github.com/JueK3y/Instagram-automated-commenting/issues?q=is%3Aopen+is%3Aissue+label%3AEnhancement) and [check the FAQ](https://github.com/JueK3y/Instagram-automated-commenting/wiki/FAQ) before filing a new one!
- 
- - type: checkboxes
+      Please make sure to [search for existing issues](https://github.com/JueK3y/Instagram-automated-commenting/issues) and [check the FAQ](https://github.com/JueK3y/Instagram-automated-commenting/wiki/FAQ) before filing a new one!
+
+- type: input
   attributes:
-    label: Related to a problem
-    description: Does your feature request refer to a problem?
-    options:
-      - label: Yes, it refers to a problem.
-      - label: No, not related.
+    label: Specification
+    placeholder: "Windows Version 20H2, IAC 2.0.1"
+    description: |
+      Please specify which `OS` you are using (with version number), which `browser (with version number)` and which `version of IAC` you are using.
+
+      If your IAC version is 2.0.1 or newer, you do not need to specify your browser.
   validations:
     required: true
- 
+
 - type: textarea
   attributes:
-    label: Describe the problem
+    label: Steps to reproduce
+    description: Tell us the steps required to trigger your bug.
     placeholder: |
-      "A clear and concise description of what the problem is.
-      Ex. I'm always frustrated when [...]"
-    description: If the request is related to a problem, describe the problem here.
-  validations:
-    required: false
- 
-- type: textarea
-  attributes:
-    label: The solution you'd like
-    description: A clear and concise description of what you want to happen.
+      1. Go to '...'
+      2. Click on '....'
+      3. Scroll down to '....'
+      4. See error
   validations:
     required: true
- 
+
 - type: textarea
   attributes:
-    label: Alternatives you've considered
-    description: A clear and concise description of any alternative solutions or features you've considered.
+    label: Expected Behavior
+    description: If you want to include screenshots, paste them into the markdown editor below.
+    placeholder: A clear and concise description of what you expected to happen.
   validations:
     required: false
+
+- type: textarea
+  attributes:
+    label: Actual Behavior
+    placeholder: What happened instead?
+  validations:
+    required: true
