--- a/.github/ISSUE_TEMPLATE/Feature_Request.yml
+++ b/.github/ISSUE_TEMPLATE/Feature_Request.yml
@@ -8,7 +8,7 @@ body:
     value: |
       Please make sure to [search for existing feature requests](https://github.com/JueK3y/Instagram-automated-commenting/issues?q=is%3Aopen+is%3Aissue+label%3AEnhancement) and [check the FAQ](https://github.com/JueK3y/Instagram-automated-commenting/wiki/FAQ) before filing a new one!
  
- - type: checkboxes
+- type: checkboxes
   attributes:
     label: Related to a problem
     description: Does your feature request refer to a problem?
@@ -17,30 +17,27 @@ body:
       - label: No, not related.
   validations:
     required: true
-
+ 
 - type: textarea
   attributes:
-    label: Steps to reproduce
-    description: Tell us the steps required to trigger your bug.
+    label: Describe the problem
     placeholder: |
-      1. Go to '...'
-      2. Click on '....'
-      3. Scroll down to '....'
-      4. See error
-  validations:
-    required: true
-
-- type: textarea
-  attributes:
-    label: Expected Behavior
-    description: If you want to include screenshots, paste them into the markdown editor below.
-    placeholder: A clear and concise description of what you expected to happen.
+      "A clear and concise description of what the problem is.
+      Ex. I'm always frustrated when [...]"
+    description: If the request is related to a problem, describe the problem here.
   validations:
     required: false
-
+ 
 - type: textarea
   attributes:
-    label: Actual Behavior
-    placeholder: What happened instead?
+    label: The solution you'd like
+    description: A clear and concise description of what you want to happen.
   validations:
     required: true
+ 
+- type: textarea
+  attributes:
+    label: Alternatives you've considered
+    description: A clear and concise description of any alternative solutions or features you've considered.
+  validations:
+    required: false
