--- a/.github/ISSUE_TEMPLATE/Feature_Request.yml
+++ b/.github/ISSUE_TEMPLATE/Feature_Request.yml
@@ -15,6 +15,7 @@ body:
     options:
       - label: Yes, it refers to a problem.
       - label: No, not related.
+  validations:
     required: true
  
 - type: textarea
