--- a/.github/ISSUE_TEMPLATE/Bug_Report.yml
+++ b/.github/ISSUE_TEMPLATE/Bug_Report.yml
@@ -15,7 +15,7 @@ body:
     description: |
       Please specify which `OS` you are using (with version number), which `browser (with version number)` and which `version of IAC` you are using.
 
-      If your IAC version is 2.0.1 or newer, you do not need to specify your browser.
+      If your IAC version is 2.0.1 or newer, you don't need to specify your browser.
   validations:
     required: true
 
