--- a/REWORK/package.json
+++ b/REWORK/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "electron-window-state": "^5.0.3",
-    "node-notifier": "^10.0.0"
+    "node-notifier": "^10.0.0",
+    "python-shell": "^3.0.1"
   }
 }
