--- a/REWORK/package.json
+++ b/REWORK/package.json
@@ -22,6 +22,7 @@
     "electron": "^13.3.0"
   },
   "dependencies": {
+    "electron-store": "^8.0.1",
     "electron-window-state": "^5.0.3",
     "node-notifier": "^10.0.0",
     "python-shell": "^3.0.1"
