--- a/REWORK/package.json
+++ b/REWORK/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "electron-store": "^8.0.1",
     "electron-window-state": "^5.0.3",
+    "keytar": "^7.7.0",
     "node-notifier": "^10.0.0",
     "python-shell": "^3.0.1"
   }
