--- a/REWORK/package.json
+++ b/REWORK/package.json
@@ -22,9 +22,11 @@
     "electron": "^13.3.0"
   },
   "dependencies": {
+    "electron-log": "^4.4.4",
     "electron-store": "^8.0.1",
     "electron-window-state": "^5.0.3",
     "keytar": "^7.7.0",
+    "network-speed": "^2.1.1",
     "node-notifier": "^10.0.0",
     "python-shell": "^3.0.1"
   }
