Deleted py files, changed mainLogic content

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 /Resource
 /output/
 /REWORK/node_modules/
-REWORK/package-lock.json
-REWORK/src/py/__pycache__/
+/REWORK/Instagram.png
+/REWORK/src/py/__pycache__/
 geckodriver.log
 IGACB.py
