--- a/REWORK/package.json
+++ b/REWORK/package.json
@@ -31,7 +31,6 @@
     "node-notifier": "^10.0.1",
     "puppeteer-extra": "^3.2.3",
     "puppeteer-extra-plugin-stealth": "^2.9.0",
-    "puppeteer-in-electron": "^3.0.5",
-    "python-shell": "^3.0.1"
+    "puppeteer-in-electron": "^3.0.5"
   }
 }
