--- a/Rework/public/package.json
+++ b/Rework/public/package.json
@@ -30,7 +30,6 @@
     "network-speed": "^2.1.1",
     "node-notifier": "^10.0.1",
     "puppeteer-extra": "^3.2.3",
-    "puppeteer-extra-plugin-stealth": "^2.9.0",
-    "puppeteer-in-electron": "^3.0.5"
+    "puppeteer-extra-plugin-stealth": "^2.9.0"
   }
 }
