Fixes two bugs related to the profile view

--- a/Rework/public/package.json
+++ b/Rework/public/package.json
@@ -29,6 +29,7 @@
     "keytar": "^7.9.0",
     "network-speed": "^2.1.1",
     "node-notifier": "^10.0.1",
+    "puppeteer": "^13.4.0",
     "puppeteer-extra": "^3.2.3",
     "puppeteer-extra-plugin-stealth": "^2.9.0"
   }
