--- a/public/package.json
+++ b/public/package.json
@@ -15,7 +15,7 @@
     "url": "https://juek3y.com"
   },
   "bugs": {
-    "url": "https://github.com/JueK3y/Instagram-automated-commenting/issues/new/choose",
+    "url": "https://github.com/JueK3y/Instagram-automated-commenting/issues/",
     "email": "iac@juek3y.com"
   },
   "main": "main.js",
@@ -29,6 +29,7 @@
     "electron": "^13.6.9"
   },
   "dependencies": {
+    "electron-builder": "^23.0.3",
     "electron-log": "^4.4.6",
     "electron-store": "^8.0.1",
     "electron-updater": "^5.0.1",
