--- a/public/package.json
+++ b/public/package.json
@@ -50,6 +50,8 @@
       "publish": {
         "provider": "github"
       }
-    }
+    },
+   "asar": true,
+   "asarUnpack": "node_modules/puppeteer/.local-chromium/**/*"
   }
 }
