--- a/public/.vscode/extensions.json
+++ b/public/.vscode/extensions.json
@@ -2,6 +2,7 @@
     "recommendations": [
         "codelios.dartsass",
         "pkief.material-icon-theme",
-        "eamodio.gitlens"
+        "eamodio.gitlens",
+        "akamud.vscode-theme-onedark"
     ]
 }
