Testing update function

--- a/public/.vscode/extensions.json
+++ b/public/.vscode/extensions.json
@@ -3,6 +3,10 @@
         "codelios.dartsass",
         "pkief.material-icon-theme",
         "eamodio.gitlens",
-        "akamud.vscode-theme-onedark"
+        "akamud.vscode-theme-onedark",
+        "dbaeumer.vscode-eslint",
+        "dominicvonk.parameter-hints",
+        "christian-kohler.npm-intellisense",
+        "syler.sass-indented"
     ]
 }
