--- a/public/package.json
+++ b/public/package.json
@@ -30,7 +30,7 @@
   },
   "dependencies": {
     "electron-log": "^4.4.8",
-    "electron-updater": "^5.2.1",
+    "electron-updater": "^4.3.8",
     "electron-window-state": "^5.0.3",
     "is-online": "^9.0.1",
     "keytar": "^7.9.0",
@@ -46,6 +46,7 @@
     "copyright": "Copyright © 2022 by JueK3y",
     "win": {
       "target": "nsis",
+      "icon": "icon.ico",
       "publish": {
         "provider": "github"
       }
