--- a/.github/workflows/ossar-analysis.yml
+++ b/.github/workflows/ossar-analysis.yml
@@ -11,6 +11,7 @@ name: OSSAR
 on:
   push:
     branches: [ main ]
+    branches: [ develop ]
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [ main ]
