--- a/.github/workflows/ossar-analysis.yml
+++ b/.github/workflows/ossar-analysis.yml
@@ -10,8 +10,7 @@ name: OSSAR
 
 on:
   push:
-    branches: [ main ]
-    branches: [ develop ]
+    branches: [ main, develop ]
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [ main ]
